--- a/kubernetes/configmap.yaml
+++ b/kubernetes/configmap.yaml
@@ -2,8 +2,9 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: conference-api-config
+  namespace: motorq
 data:
   FLASK_ENV: production
-  DB_HOST: postgres_db
+  DB_HOST: conference-db
   DB_NAME: test_db
   DB_USER: postgres
