--- a/kubernetes/secret.yaml
+++ b/kubernetes/secret.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: conference-api-secret
+  namespace: motorq
 type: Opaque
 data:
-  DB_PASSWORD: c29tZXBhc3N3b3Jk  # Base64 encoded
+  DB_PASSWORD: postgres  # Base64 encoded
