--- a/kubernetes/service.yaml
+++ b/kubernetes/service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: conference-api-service
+  namespace: motorq
 spec:
   selector:
     app: conference-api
@@ -9,4 +10,4 @@ spec:
   - protocol: TCP
     port: 80
     targetPort: 5000
-  type: ClusterIP
+  type: LoadBalancer
